# NapkinSimilarity

./: README.md  pyproject.toml  tutorial.ipynb
NapkinSimilarity/: __init__.py  napkin_similarity.py
