[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NapkinSimilarity"
version = "0.1.0"
description = "MS2 similarity that can be explained on a napkin"
authors = [
    {name = "Jonas", email = "jonas.dietrich@wur.nl"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.1.0",
    "numba>=0.61.0"
]

[project.urls]
"Homepage" = "https://github.com/j-a-dietrich/NapkinSimilarity"